<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">侎佧</string>
    <string name="hello_world">Hello world!</string>
    <string name="menuMainTitle">发起群聊</string>
    <string name="menuChatTitle">查看详情</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_qun">发起群聊</string>

    <string name="tab_msg">消息</string>
    <string name="tab_app">应用</string>
    <string name="tab_cts">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    
    <string name="addfriend_contact">新的朋友</string>
    <string name="addfriend_qucikgroup">群聊</string>
    <string name="addfriend_app">应用服务号</string>
    
    <string name="delete_chat">删除对话</string>
    <string name="copy_message">复制</string>
    <string name="delete_message">删除消息</string>
    
    <string name="starFriend_set">标为常联系人</string>
    <string name="starFriend_cancel">取消常联系人</string>
    <string name="net_disconnection">网络断开</string>
    
    <string name="rcd_start">按住 说话</string>
    <string name="rcd_stop">松开 结束</string>
    <string name="rcd_cancel">松开手指，取消发送</string>
    <string name="rcd_warning">录音时间太短</string>
    <string name="rcd_to_cancel">手指上滑，取消发送</string>
    <string name="rcd_time_left">还可以说%1$d秒</string>
    
    <string name="format_url_download_image">http://<xliff:g id="fileUrl" example="115.29.107.77:5083/2,3254333a59">%s</xliff:g>?filename=<xliff:g id="filename" example="rename_newname.jpg">%s</xliff:g>&amp;width=<xliff:g id="width" example="630">%d</xliff:g>&amp;height=<xliff:g id="height" example="370">%d</xliff:g></string>
    
    <string name="format_url_download_image2">http://<xliff:g id="fileUrl" example="115.29.107.77:5083/4/48f9a504d6">%s</xliff:g>/<xliff:g id="extention" example=".jpg">%s</xliff:g>?width=<xliff:g id="width" example="630">%d</xliff:g>&amp;height=<xliff:g id="height" example="370">%d</xliff:g></string>
    

    <item name="tag_group" type="id"/>
    <item name="tag_child" type="id"/>
    <item name="tag_child_is_into" type="id"/>
    
    <string name="framMatter">办理</string>
    <string name="framTalk">侎聊</string>
    <string name="framContact">通讯录</string>
    <string name="framDiscover">发现</string>
    <string name="framMe">我</string>
    <string name="matterToday">今天</string>
    <string name="matterTomo">明天</string>
    <string name="matterAll">全部</string>
    <string name="matterFuture">以后</string>
    <string name="matterProgress">进展</string>
    <string name="matterDiscuss">评论</string>
    <string name="matterTrends">动态</string>
    <string name="matterApproval">审批</string>
    <string name="progressTotal">总体情况</string>
    <string name="send">发送</string>
    
    <string name="plan">做计划</string>
    <string name="progress">填写进展</string>
    <string name="no_progress">Ta还没有填写进展</string>
    <string name="all_no_progress">目前还没有人填写进展</string>
    <string name="remind">设提醒</string>
    
    <string name = "agree">审批同意</string>
    <string name = "disagree">审批不同意</string>
    <string name ="jointpass">会签通过</string>
    <string name = "jointmiss">会签不通过</string>
    <string name = "cancle">取消</string>
    <string name = "wrtieProgress">填写进展</string>
    
    <string name="backtext">返回</string>
    
    <string name="calendar_msg">今天暂无计划，休息一下</string>
    <string name="calendar_today">今天          </string>
    <string name="calendar_yet">未计划的</string>
    <string name="calendar_monday">周一</string>
    <string name="calendar_tuesday">周二</string>
    <string name="calendar_wednesday ">周三</string>
    <string name="calendar_thursday">周四</string>
    <string name="calendar_friday">周五</string>
    <string name="calendar_saturday">周六</string>
    <string name="calendar_sunday">周日</string>
    
    <string name="title_activity_photo_check">PhotoCheck</string>
    <string name="app_tip">提示</string>
    <string name="symbol">¥</string>
	<string name="getting_access_token">正在获取access token...</string>
	<string name="get_access_token_succ">获取access token成功</string>
	<string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
	<string name="getting_prepayid">正在获取预支付订单...</string>
	<string name="paying">支付中</string>
	<string name="get_prepayid_succ">获取prepayid成功</string>
	<string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	<string name="payProtocol">《侎佧服务使用协议》</string>
	<string name="miicaaprotocol">/manual-service.html</string>
	<string name="miicaadiscuss">http://c.miicaa.com</string>
	<string name="star_file_url">/enterprisedoc/phone/efile/mark</string>
	<string name="file_rename_url">/enterprisedoc/phone/efile/rename</string>
	<string name="file_remove_url">/enterprisedoc/phone/efile/remove</string>
	<string name="file_new_url">/enterprisedoc/phone/efile/mkdir</string>
	<string name="file_edit_url">/enterprisedoc/phone/efile/edit</string>
	<string name="file_upload_url">/enterprisedoc/phone/efile/upload</string>
	<string name="file_all_url">/enterprisedoc/phone/efile/list</string>
	<string name="pay_info_url">/sysconfig/phone/pay/initPayIndex</string>
	<string name="pay_commit_bill_url">/sysconfig/phone/pay/recharge</string>
	<string name="pay_bought_package_url">/sysconfig/phone/pay/getUnusedGoods</string>
	<string name="pay_current_package_url">/sysconfig/phone/pay/getCurrentUsedGoods</string>
	<string name="pay_bank_info_url">/sysconfig/phone/pay/initAccount</string>
	<string name="pay_order_url">/sysconfig/phone/pay/initOrders</string>
	<string name="pay_package_url">/sysconfig/phone/pay/initSet</string>
	<string name="pay_payment_url">/sysconfig/phone/pay/order</string>
	<string name="pay_myfund_url">/sysconfig/phone/pay/initMyAsset</string>
	<string name="pay_closetrade_url">/sysconfig/phone/pay/closetrade</string>
	<string name="pay_receipt_url">/sysconfig/phone/invoice/invoiceList</string>
	<string name="pay_receipt_commit_url">/sysconfig/phone/invoice/applyInvoice</string>
	<string name="pay_isadmin_url">/sysconfig/phone/pay/isAdmin</string>
	<string name="pay_getTime_url">/sysconfig/phone/pay/getStartTime</string>
	<string name="report_today_url">/home/phone/workReport/bulidWorkReportList</string>
	<string name="report_tomorrow_url">/home/phone/workReport/buildPlanReportList</string>
	<string name="report_create_url">/home/phone/workReport/addReport</string>
	<string name="report_update_url">/home/phone/workReport/updateReport</string>
	<string name="report_detail_url">/home/phone/workReport/getReportByWorkId</string>
	<string name="upload_url">/home/phone/attach/upload</string>
	<string name="report_comment_url">/home/phone/workReport/getCommentByWorkId</string>
	<string name="report_finish_url">/home/phone/workReport/completeReport</string>
	<string name="report_delete_comment_url">/home/phone/workReport/deleteComment</string>
	<string name="report_delete_url">/home/phone/workReport/deleteReport</string>
	<string name="report_generate_arrange_url">/home/phone/workReport/buidArrangeByReportPlan</string>
	<string name="report_update_item_url">/home/phone/workReport/updateReportListById</string>
	<string name="report_delete_item_url">/home/phone/workReport/deleteReportListById</string>
	<string name="get_subtask_url">/home/phone/thing/subtask</string>
	<string name="announcement_list_url">/announcement/phone/home/list</string>
	<string name="announcement_markread_url">/announcement/phone/home/markread</string>
	<string name="enterprice_url">/sysconfig/phone/eservice/index</string>
	<string name="enterprice_order_url">/sysconfig/phone/eservice/order</string>
	<string name="enterprice_myservice_url">/sysconfig/phone/eservice/getorders</string>
	<string name="enterprice_question_url">/sysconfig/phone/eservice/addquesform?orderId=</string>
	<string name="enterprice_comment_url">/sysconfig/phone/eservice/appraiseform?orderId=</string>
	<string name="enterprice_finish_url">/sysconfig/phone/eservice/viewappraise?orderId=</string>
	<!-- crm start -->
	<string name="crm_custom_kind_url">/home/phone/crm/getCustomerAllType</string>
	<!-- crm end -->
    <string name="sign_in_remind">签到提醒</string>
	<string name="sign_out_remind">签退提醒</string>
	<string name="screen">筛选</string>
	<string name="checkwork_date">考勤日期</string>
	<string name="write_familayname">姓名</string>
	<string name="write_orgname">部门</string>
	<string name="tongji_checkwork_later">迟到</string>
	<string name="tongji_checkwork_leaved">早退</string>
	<string name="tongji_checkwork_nosignIn">未签到</string>
	<string name="tongji_checkwork_nosignOut">未签退</string>
	<string name="today_month">本月</string>
	<string name="channel_name">app_channel</string>
	<string name="report_day">创建日报</string>
	<string name="report_week">创建周报</string>
	<string name="report_month">创建月报</string>
	<string name="report_custom">创建自定义报告</string>
	<string name="search_text">搜索</string>
	<string name="report_type">报告类型</string>
	<string name="report_name">报告人</string>
	<string name="process_type">流程类型</string>
	<string name="approve_process">审批流程</string>
	<string name="free_process">自由流程</string>
	<string name="fixed_process">固定流程</string>
	
	<!--  手势登陆资源-->
	 <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接%d个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <!--  end 手势登陆资源-->
    
    <string name="little_file_download"><xliff:g id = "fileUrl" example="https://www.miicaa.com">%s</xliff:g>/docbase_srv/staticfile/resize/downLoad?fid=<xliff:g id="fileId" example="fileId..xxxxx">%s</xliff:g></string>
    <string name="send_loading">发送中</string>
    <string name="register_text">免	费	注	册</string>
    <string name="email_text">邮箱</string>
    <string name="register_success_text">我们已经发送注册右键到您的邮箱\n\n<xliff:g id = "email">%s</xliff:g>\n\n请点击邮箱中的激活链接完成注册，开启侎卡之旅</string>
</resources>
