<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_centerVertical="true"
    android:orientation="horizontal" >
    <TextView 
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_familayname"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"
        android:layout_weight="1"
       />
     <TextView 
        android:id="@+id/lateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongji_checkwork_later"
        android:gravity="center"
         android:layout_gravity="center_vertical"
        android:textSize="18sp"
         android:layout_weight="1"
        />
      <TextView 
        android:id="@+id/leavedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongji_checkwork_leaved"
        android:gravity="center"
         android:layout_gravity="center_vertical"
        android:textSize="18sp"
         android:layout_weight="1"
        />
       <TextView 
        android:id="@+id/nosignInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongji_checkwork_nosignIn"
        android:gravity="center"
         android:layout_gravity="center_vertical"
        android:textSize="18sp"
         android:layout_weight="1"
        />
       <TextView 
        android:id="@+id/nosignOutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongji_checkwork_nosignOut"
        android:gravity="center"
         android:layout_gravity="center_vertical"
        android:textSize="18sp"
         android:layout_weight="1"
       />
</LinearLayout>
