<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/main_bottom">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:baselineAligned="false" 
    android:orientation="horizontal"
    android:layout_centerInParent="true" >
    <LinearLayout 
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_weight="1">
        
    
    <ImageView 
        android:id="@+id/imgP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/matter_progress"
            />
    <TextView 
        android:id="@+id/textP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/manual_textView"
        android:text="@string/progress"
        android:layout_alignParentBottom="true"
        />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
    <ImageView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/matter_plan"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/plan"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
    <ImageView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/matter_remind"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remind"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>
