<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:textcircle="http://schemas.android.com/apk/res/com.example.calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_head_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/an_matter_create_menu_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detection_calendar_day"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:text="今天          "
            android:textColor="#000000"
            android:textSize="20dp" />

        <FrameLayout
            android:id="@+id/detection_calendar_center"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detection_calendar_date"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="2014年12月"
                android:textColor="#000000"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="4dip"
                android:background="@drawable/calendar_down" />
        </FrameLayout>

        <TextView
            android:id="@+id/detection_calendar_yet"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:text="@string/calendar_yet"
            android:textColor="#000000"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/calendar_month_left"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/detection_calendar_day"
            android:background="@android:color/transparent"
            android:src="@drawable/calendar_left" />

        <ImageButton
            android:id="@+id/calendar_month_right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:layout_toLeftOf="@id/detection_calendar_yet"
            android:background="@android:color/transparent"
            android:src="@drawable/calendar_right" />
    </RelativeLayout>

    <com.yxst.epic.yixin.view.CalendarIUScrollView
        android:id="@+id/detection_calendar_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#fffffe"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fffffe"
                android:orientation="vertical"
                android:paddingLeft="10dip"
                android:paddingRight="10dip" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#20000000" >
                </View>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="20dip"
                    android:layout_marginBottom="2dip"
                    android:layout_marginTop="2dip" >

                    <TableRow>

                       

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_monday"
                            android:textColor="@color/date_2" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_tuesday"
                            android:textColor="@color/date_2" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_wednesday "
                            android:textColor="@color/date_2" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_thursday"
                            android:textColor="@color/date_2" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_friday"
                            android:textColor="@color/date_2" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_saturday"
                            android:textColor="@color/date_1" />
                         <TextView
                            style="@style/dateStyle"
                            android:text="@string/calendar_sunday"
                            android:textColor="@color/date_1" />
                    </TableRow>
                </TableLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#20000000" >
                </View>

                <com.yxst.epic.yixin.view.CalendarView
                    android:id="@+id/detection_calendar_calendarview"
                    android:layout_width="fill_parent"
                    android:layout_height="300dip"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip" >
                </com.yxst.epic.yixin.view.CalendarView>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#20000000" >
                </View>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/calendar_day_parent"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/an_matter_create_menu_bg"
                    android:visibility="gone" >

                    <ImageButton
                        android:id="@+id/calendar_day_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip"
                        
                        android:background="@android:color/transparent"
                        android:src="@drawable/an_text_left_next" />

                    <ImageButton
                        android:id="@+id/calendar_day_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:background="@android:color/transparent"
                        android:src="@drawable/an_text_right_next" />

                    <TextView
                        android:id="@+id/calendar_day_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="2014年12月5日 今天"
                        android:textSize="10pt" />
                </RelativeLayout>

                <ListView
                    android:id="@+id/detection_calendar_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:dividerHeight="1dip"
                    
                    android:divider="#b9b9b9"
                    android:cacheColorHint="#ffffff"
                    android:listSelector="#ff0000"
                     >
                </ListView>

                <TextView
                    android:layout_marginTop="50dip"
                    android:id="@android:id/empty"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="top|center_horizontal"
                    android:text="@string/calendar_msg"
                    android:textColor="#21bcd8" />
            </LinearLayout>
        </LinearLayout>
    </com.yxst.epic.yixin.view.CalendarIUScrollView>

</LinearLayout>